feat: Add custom meta tags for web link previews

--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,8 @@
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+    For more details, see:
+    https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
@@ -18,21 +18,53 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  
+  <!-- === START: YOUR CUSTOMIZATIONS === -->
 
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
+  <!-- Regular Meta Tags -->
+  <title>ChefAI: Your AI Cooking Assistant</title>
+  <meta name="description" content="Get instant recipes, create meal plans, and manage your pantry with ChefAI. Your personal AI-powered kitchen companion.">
+  <link rel="icon" type="image/png" href="icons/Icon-192.png"/>
+
+  <!-- Open Graph Meta Tags for Social Media (Facebook, WhatsApp, etc.) -->
+  <meta property="og:title" content="ChefAI: Your AI Cooking Assistant" />
+  <meta property="og:description" content="Get instant recipes, create meal plans, and manage your pantry with ChefAI. Your personal AI-powered kitchen companion." />
+  <meta property="og:image" content="icons/Icon-192.png" />
+  <meta property="og:url" content="https://chefai-bc640.web.app" />
+  <meta property="og:type" content="website" />
+
+  <!-- === END: YOUR CUSTOMIZATIONS === -->
+
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="cooking_app">
+  <meta name="apple-mobile-web-app-title" content="meal_planner">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>cooking_app</title>
-  <link rel="manifest" href="manifest.json">
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = null;
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        }
+      }).then(function(engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(function(appRunner) {
+        return appRunner.runApp();
+      });
+    });
+  </script>
 </body>
 </html>
