--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details, see:
+    https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
@@ -11,33 +24,37 @@
   <!-- Regular Meta Tags -->
   <title>ChefAI: Your AI Cooking Assistant</title>
   <meta name="description" content="Get instant recipes, create meal plans, and manage your pantry with ChefAI. Your personal AI-powered kitchen companion.">
-  <link rel="icon" type="image/png" href="icons/Icon-192.png"/>
+  <link rel="icon" type="image/png" href="icons/android-chrome-192x192.png"/>
 
   <!-- Open Graph Meta Tags for Social Media (Facebook, WhatsApp, etc.) -->
   <meta property="og:title" content="ChefAI: Your AI Cooking Assistant" />
   <meta property="og:description" content="Get instant recipes, create meal plans, and manage your pantry with ChefAI." />
-  <meta property="og:image" content="https://chefai-bc640.web.app/icons/Icon-512.png" />
+  <meta property="og:image" content="https://chefai-bc640.web.app/icons/android-chrome-512x512.png" />
   <meta property="og:url" content="https://chefai-bc640.web.app" />
   <meta property="og:type" content="website" />
 
   <!-- === END: YOUR CUSTOMIZATIONS === -->
 
+
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="ChefAI">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <script>
+    // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
+  <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
     window.addEventListener('load', function(ev) {
+      // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
@@ -51,3 +68,4 @@
   </script>
 </body>
 </html>
+
